--- a/高等数学/《高等数学》常用积分公式.md
+++ b/高等数学/《高等数学》常用积分公式.md
@@ -1,117 +1,72 @@
-# 同济大学《高等数学》常用积分公式（要求记忆）
+# 常用积分公式速查表
 
-你好！这里是根据同济大学版《高等数学》的教学要求，为你整理的必须熟练掌握的积分公式。这些公式是解决各种积分问题（尤其是不定积分和定积分计算）的基础，强烈建议牢固记忆。
+## 1. 幂函数
+- \[
+  \int x^n \, dx = \frac{x^{\,n+1}}{n+1} + C,\quad n \ne -1
+  \]
+- \[
+  \int \frac{1}{x}\,dx = \ln |x| + C
+  \]
 
-## 一、基本积分表
+## 2. 指数与对数
+- \[
+  \int e^{x}\,dx = e^{x} + C
+  \]
+- \[
+  \int a^{x}\,dx = \frac{a^{x}}{\ln a} + C,\quad a>0,\; a\ne 1
+  \]
+- \[
+  \int \ln x \, dx = x\ln x - x + C
+  \]
 
-这是最核心、最基础的部分，是所有积分计算的出发点。
+## 3. 三角函数
+| 原函数 \(f(x)\) | 积分 \(\displaystyle\int f(x)\,dx\) |
+|-----------------|------------------------------------|
+| \(\sin x\) | \(-\cos x + C\) |
+| \(\cos x\) | \(\sin x + C\) |
+| \(\tan x\) | \(-\ln|\cos x| + C\) |
+| \(\cot x\) | \(\ln|\sin x| + C\) |
+| \(\sec x\) | \(\ln|\sec x + \tan x| + C\) |
+| \(\csc x\) | \(-\ln|\csc x + \cot x| + C\) |
+| \(\sec^2 x\) | \(\tan x + C\) |
+| \(\csc^2 x\) | \(-\cot x + C\) |
+| \(\sec x \tan x\) | \(\sec x + C\) |
+| \(\csc x \cot x\) | \(-\csc x + C\) |
 
-- **常数 (Constant):**
-  $$
-  \int 0 \,dx = C
-  $$
+## 4. 反三角函数
+- \[
+  \int \frac{1}{1+x^{2}}\,dx = \arctan x + C
+  \]
+- \[
+  \int \frac{1}{\sqrt{1-x^{2}}}\,dx = \arcsin x + C
+  \]
+- \[
+  \int \frac{-1}{\sqrt{1-x^{2}}}\,dx = \arccos x + C
+  \]
 
-- **幂函数 (Power Function):**
-  $$
-  \int x^\alpha \,dx = \frac{x^{\alpha+1}}{\alpha+1} + C \quad (\alpha \neq -1)
-  $$
+## 5. 双曲函数
+| 原函数 \(f(x)\) | 积分 \(\displaystyle\int f(x)\,dx\) |
+|-----------------|------------------------------------|
+| \(\sinh x\) | \(\cosh x + C\) |
+| \(\cosh x\) | \(\sinh x + C\) |
+| \(\text{sech}^2 x\) | \(\tanh x + C\) |
 
-- **反比例函数 (Inverse Proportional Function):**
-  $$
-  \int \frac{1}{x} \,dx = \ln|x| + C
-  $$
+## 6. 含根式的常见形式
+- \[
+  \int \frac{1}{\sqrt{a^{2}-x^{2}}}\,dx = \arcsin\!\left(\frac{x}{a}\right) + C,\quad a>0
+  \]
+- \[
+  \int \frac{1}{a^{2}+x^{2}}\,dx = \frac{1}{a}\arctan\!\left(\frac{x}{a}\right) + C
+  \]
+- \[
+  \int \frac{1}{x^{2}-a^{2}}\,dx = \frac{1}{2a}\ln\!\left|\frac{x-a}{x+a}\right| + C
+  \]
 
-- **指数函数 (Exponential Function):**
-  $$
-  \int e^x \,dx = e^x + C
-  $$
-  $$
-  \int a^x \,dx = \frac{a^x}{\ln a} + C
-  $$
+## 7. 备忘小贴士
+1. **幂函数公式**只在 \(n\neq -1\) 时适用，若 \(n=-1\) 则转化为对数积分 \(\ln|x|\)。
+2. **指数函数**若底数不是 \(e\)，需除以 \(\ln a\)。
+3. **三角函数对**（如 \(\sin\)↔\(\cos\)、\(\sec^2\)↔\(\tan\)）可帮助快速记忆。
+4. 含 **根号** 的积分常与反三角函数对应，可使用 \(x=a\sin\theta\) 或 \(x=a\tan\theta\) 做替换推导。
+5. 常考的确定性（定值）积分可先背 **不定积分公式** 再套用牛顿–莱布尼茨公式。
 
-- **三角函数 (Trigonometric Functions):**
-  $$
-  \int \sin x \,dx = -\cos x + C
-  $$
-  $$
-  \int \cos x \,dx = \sin x + C
-  $$
-  $$
-  \int \sec^2 x \,dx = \tan x + C
-  $$
-  $$
-  \int \csc^2 x \,dx = -\cot x + C
-  $$
-  $$
-  \int \sec x \tan x \,dx = \sec x + C
-  $$
-  $$
-  \int \csc x \cot x \,dx = -\csc x + C
-  $$
-
-- **另外四个常用三角函数积分 (Often memorized as well):**
-  $$
-  \int \tan x \,dx = -\ln|\cos x| + C
-  $$
-  $$
-  \int \cot x \,dx = \ln|\sin x| + C
-  $$
-  $$
-  \int \sec x \,dx = \ln|\sec x + \tan x| + C
-  $$
-  $$
-  \int \csc x \,dx = \ln|\csc x - \cot x| + C
-  $$
-
-## 二、导致反三角函数的积分
-
-这几类是利用凑微分方法推导出来的，但因为极其常用，通常也要求直接记忆。
-
-$$
-\int \frac{1}{\sqrt{a^2 - x^2}} \,dx = \arcsin\frac{x}{a} + C \quad (a>0)
-$$
-
-$$
-\int \frac{1}{a^2 + x^2} \,dx = \frac{1}{a}\arctan\frac{x}{a} + C \quad (a>0)
-$$
-
-## 三、其他重要积分公式
-
-这些公式在处理特定类型的积分时非常有用，能大幅简化计算。
-
-- **分部积分法 (Integration by Parts):**
-  $$
-  \int u \,dv = uv - \int v \,du
-  $$
-  对于定积分：
-  $$
-  \int_a^b u \,dv = [uv]_a^b - \int_a^b v \,du
-  $$
-
-- **含有二次项的积分 (Integrals involving quadratic terms):**
-  $$
-  \int \frac{1}{x^2 - a^2} \,dx = \frac{1}{2a}\ln\left|\frac{x-a}{x+a}\right| + C
-  $$
-  $$
-  \int \frac{1}{\sqrt{x^2 \pm a^2}} \,dx = \ln|x + \sqrt{x^2 \pm a^2}| + C
-  $$
-
-- **华里士公式 (Wallis' Formula):** (用于计算特定区间上的定积分，考试中非常有用)
-  设 $I_n = \int_0^{\frac{\pi}{2}} \sin^n x \,dx = \int_0^{\frac{\pi}{2}} \cos^n x \,dx$，则：
-  $$
-  I_n =
-  \begin{cases}
-  \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \frac{1}{2} \cdot \frac{\pi}{2}, & \text{当 } n \text{ 为正偶数} \\
-  \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \frac{2}{3}, & \text{当 } n \text{ 为大于1的正奇数}
-  \end{cases}
-  $$
-  **记忆技巧:** 可以用双阶乘 `!!` 表示：
-  $$
-  I_n =
-  \begin{cases}
-  \frac{(n-1)!!}{n!!} \cdot \frac{\pi}{2}, & \text{当 } n \text{ 为正偶数} \\
-  \frac{(n-1)!!}{n!!}, & \text{当 } n \text{ 为正奇数}
-  \end{cases}
-  $$
-  > **注意:** 双阶乘 `n!!` 表示从 `n` 开始，每次减2，直到1或2。例如，$6!! = 6 \cdot 4 \cdot 2$，$7!! = 7 \cdot 5 \cdot 3 \cdot 1$。
-
+> 建议结合做题反复运用，加深记忆。
