--- a/高等数学/《高等数学》常用积分公式.md
+++ b/高等数学/《高等数学》常用积分公式.md
@@ -1,72 +1,133 @@
-# 常用积分公式速查表
+# 微积分常用积分公式大全
 
-## 1. 幂函数
-- \[
-  \int x^n \, dx = \frac{x^{\,n+1}}{n+1} + C,\quad n \ne -1
-  \]
-- \[
-  \int \frac{1}{x}\,dx = \ln |x| + C
-  \]
+本文档汇总了微积分（高等数学）中常见且重要的不定积分和定积分公式。所有公式均采用 GitHub Flavored Markdown (GFM) 支持的 LaTeX 格式编写。
 
-## 2. 指数与对数
-- \[
-  \int e^{x}\,dx = e^{x} + C
-  \]
-- \[
-  \int a^{x}\,dx = \frac{a^{x}}{\ln a} + C,\quad a>0,\; a\ne 1
-  \]
-- \[
-  \int \ln x \, dx = x\ln x - x + C
-  \]
+**注意**：在所有不定积分公式的末尾，都应加上一个任意常数 $C$。为简洁起见，部分基础公式列表会省略 $C$，但在实际解题中务必加上。
 
-## 3. 三角函数
-| 原函数 \(f(x)\) | 积分 \(\displaystyle\int f(x)\,dx\) |
-|-----------------|------------------------------------|
-| \(\sin x\) | \(-\cos x + C\) |
-| \(\cos x\) | \(\sin x + C\) |
-| \(\tan x\) | \(-\ln|\cos x| + C\) |
-| \(\cot x\) | \(\ln|\sin x| + C\) |
-| \(\sec x\) | \(\ln|\sec x + \tan x| + C\) |
-| \(\csc x\) | \(-\ln|\csc x + \cot x| + C\) |
-| \(\sec^2 x\) | \(\tan x + C\) |
-| \(\csc^2 x\) | \(-\cot x + C\) |
-| \(\sec x \tan x\) | \(\sec x + C\) |
-| \(\csc x \cot x\) | \(-\csc x + C\) |
+## 1. 基本积分表 (Elementary Integrals)
 
-## 4. 反三角函数
-- \[
-  \int \frac{1}{1+x^{2}}\,dx = \arctan x + C
-  \]
-- \[
-  \int \frac{1}{\sqrt{1-x^{2}}}\,dx = \arcsin x + C
-  \]
-- \[
-  \int \frac{-1}{\sqrt{1-x^{2}}}\,dx = \arccos x + C
-  \]
+这是所有积分运算的基础，必须熟练掌握。
 
-## 5. 双曲函数
-| 原函数 \(f(x)\) | 积分 \(\displaystyle\int f(x)\,dx\) |
-|-----------------|------------------------------------|
-| \(\sinh x\) | \(\cosh x + C\) |
-| \(\cosh x\) | \(\sinh x + C\) |
-| \(\text{sech}^2 x\) | \(\tanh x + C\) |
+| 函数类型 | 积分公式 | 条件 |
+| :--- | :--- | :--- |
+| **常数函数** | $$\int 0 \,dx = C$$ | |
+| **幂函数** | $$\int x^n \,dx = \frac{x^{n+1}}{n+1} + C$$ | $n \neq -1$ |
+| **反比例函数** | $$\int \frac{1}{x} \,dx = \ln|x| + C$$ | |
+| **指数函数** | $$\int e^x \,dx = e^x + C$$ | |
+| **指数函数** | $$\int a^x \,dx = \frac{a^x}{\ln a} + C$$ | $a > 0, a \neq 1$ |
+| **三角函数 (正弦)** | $$\int \sin x \,dx = -\cos x + C$$ | |
+| **三角函数 (余弦)** | $$\int \cos x \,dx = \sin x + C$$ | |
+| **三角函数 (正切)** | $$\int \tan x \,dx = -\ln|\cos x| + C$$ | |
+| **三角函数 (余切)** | $$\int \cot x \,dx = \ln|\sin x| + C$$ | |
+| **三角函数 (正割)** | $$\int \sec x \,dx = \ln|\sec x + \tan x| + C$$ | |
+| **三角函数 (余割)** | $$\int \csc x \,dx = \ln|\csc x - \cot x| + C$$ | |
+| **三角函数 (正割平方)** | $$\int \sec^2 x \,dx = \tan x + C$$ | |
+| **三角函数 (余割平方)** | $$\int \csc^2 x \,dx = -\cot x + C$$ | |
+| **三角函数 (正割正切)** | $$\int \sec x \tan x \,dx = \sec x + C$$ | |
+| **三角函数 (余割余切)** | $$\int \csc x \cot x \,dx = -\csc x + C$$ | |
 
-## 6. 含根式的常见形式
-- \[
-  \int \frac{1}{\sqrt{a^{2}-x^{2}}}\,dx = \arcsin\!\left(\frac{x}{a}\right) + C,\quad a>0
-  \]
-- \[
-  \int \frac{1}{a^{2}+x^{2}}\,dx = \frac{1}{a}\arctan\!\left(\frac{x}{a}\right) + C
-  \]
-- \[
-  \int \frac{1}{x^{2}-a^{2}}\,dx = \frac{1}{2a}\ln\!\left|\frac{x-a}{x+a}\right| + C
-  \]
+## 2. 有理函数积分 (Integrals of Rational Functions)
 
-## 7. 备忘小贴士
-1. **幂函数公式**只在 \(n\neq -1\) 时适用，若 \(n=-1\) 则转化为对数积分 \(\ln|x|\)。
-2. **指数函数**若底数不是 \(e\)，需除以 \(\ln a\)。
-3. **三角函数对**（如 \(\sin\)↔\(\cos\)、\(\sec^2\)↔\(\tan\)）可帮助快速记忆。
-4. 含 **根号** 的积分常与反三角函数对应，可使用 \(x=a\sin\theta\) 或 \(x=a\tan\theta\) 做替换推导。
-5. 常考的确定性（定值）积分可先背 **不定积分公式** 再套用牛顿–莱布尼茨公式。
+这类积分通常与反三角函数和对数函数有关。
 
-> 建议结合做题反复运用，加深记忆。
+| 积分形式 | 结果 | 条件 |
+| :--- | :--- | :--- |
+| **反正切形式** | $$\int \frac{1}{x^2 + a^2} \,dx = \frac{1}{a} \arctan\frac{x}{a} + C$$ | $a \neq 0$ |
+| **对数形式 1** | $$\int \frac{1}{x^2 - a^2} \,dx = \frac{1}{2a} \ln\left|\frac{x-a}{x+a}\right| + C$$ | $a \neq 0$ |
+| **对数形式 2** | $$\int \frac{1}{a^2 - x^2} \,dx = \frac{1}{2a} \ln\left|\frac{a+x}{a-x}\right| + C$$ | $a \neq 0$ |
+
+## 3. 无理函数积分 (Integrals of Irrational Functions)
+
+这类积分主要涉及含有根号的表达式。
+
+| 积分形式 | 结果 | 条件 |
+| :--- | :--- | :--- |
+| **反正弦形式** | $$\int \frac{1}{\sqrt{a^2 - x^2}} \,dx = \arcsin\frac{x}{a} + C$$ | $a > 0$ |
+| **对数形式 (双曲)** | $$\int \frac{1}{\sqrt{x^2 + a^2}} \,dx = \ln(x + \sqrt{x^2 + a^2}) + C$$ | $a > 0$ |
+| **对数形式 (双曲)** | $$\int \frac{1}{\sqrt{x^2 - a^2}} \,dx = \ln|x + \sqrt{x^2 - a^2}| + C$$ | $a > 0$ |
+| **根式积分 1** | $$\int \sqrt{a^2 - x^2} \,dx = \frac{x}{2}\sqrt{a^2 - x^2} + \frac{a^2}{2}\arcsin\frac{x}{a} + C$$ | $a > 0$ |
+| **根式积分 2** | $$\int \sqrt{x^2 \pm a^2} \,dx = \frac{x}{2}\sqrt{x^2 \pm a^2} \pm \frac{a^2}{2}\ln|x + \sqrt{x^2 \pm a^2}| + C$$ | |
+
+## 4. 指数、对数与三角函数组合积分
+
+这些是分部积分法的经典应用。
+
+| 积分形式 | 结果 |
+| :--- | :--- |
+| **对数函数** | $$\int \ln x \,dx = x \ln x - x + C$$ |
+| **指数-正弦** | $$\int e^{ax} \sin(bx) \,dx = \frac{e^{ax}}{a^2+b^2}(a\sin(bx) - b\cos(bx)) + C$$ |
+| **指数-余弦** | $$\int e^{ax} \cos(bx) \,dx = \frac{e^{ax}}{a^2+b^2}(a\cos(bx) + b\sin(bx)) + C$$ |
+
+## 5. 三角函数幂的降幂公式与递推公式
+
+### 降幂公式 (Power-Reduction Formulas)
+
+$$
+\sin^2 x = \frac{1 - \cos(2x)}{2}
+$$
+$$
+\cos^2 x = \frac{1 + \cos(2x)}{2}
+$$
+
+### 递推公式 (Reduction Formulas)
+
+$$
+\int \sin^n x \,dx = -\frac{1}{n} \sin^{n-1}x \cos x + \frac{n-1}{n} \int \sin^{n-2}x \,dx
+$$
+$$
+\int \cos^n x \,dx = \frac{1}{n} \cos^{n-1}x \sin x + \frac{n-1}{n} \int \cos^{n-2}x \,dx
+$$
+$$
+\int \tan^n x \,dx = \frac{1}{n-1} \tan^{n-1}x - \int \tan^{n-2}x \,dx
+$$
+$$
+\int \sec^n x \,dx = \frac{1}{n-1} \sec^{n-2}x \tan x + \frac{n-2}{n-1} \int \sec^{n-2}x \,dx
+$$
+
+## 6. 重要积分方法与定积分公式
+
+### 积分方法
+
+- **分部积分法 (Integration by Parts):**
+  $$
+  \int u \,dv = uv - \int v \,du
+  $$
+
+- **定积分分部积分法:**
+  $$
+  \int_a^b u \,dv = [uv]_a^b - \int_a^b v \,du
+  $$
+
+- **换元积分法 (Integration by Substitution):**
+  若 $u = g(x)$, 则
+  $$
+  \int f(g(x))g'(x) \,dx = \int f(u) \,du
+  $$
+
+### 定积分公式
+
+- **牛顿-莱布尼茨公式 (Newton-Leibniz Formula):**
+  设 $F'(x) = f(x)$, 则
+  $$
+  \int_a^b f(x) \,dx = F(b) - F(a)
+  $$
+
+- **华里士公式 (Wallis' Formula):**
+  令 $I_n = \int_0^{\frac{\pi}{2}} \sin^n x \,dx = \int_0^{\frac{\pi}{2}} \cos^n x \,dx$
+  $$
+  I_n =
+  \begin{cases}
+  \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \frac{1}{2} \cdot \frac{\pi}{2}, & \text{当 } n \text{ 为正偶数} \\
+  \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \frac{2}{3}, & \text{当 } n \text{ 为大于1的正奇数}
+  \end{cases}
+  $$
+  **使用双阶乘 `!!` 表示:**
+  $$
+  I_n =
+  \begin{cases}
+  \frac{(n-1)!!}{n!!} \cdot \frac{\pi}{2}, & \text{当 } n \text{ 为正偶数} \\
+  \frac{(n-1)!!}{n!!}, & \text{当 } n \text{ 为正奇数}
+  \end{cases}
+  $$
+
+---
