--- a/高等数学/《高等数学》常用积分公式.md
+++ b/高等数学/《高等数学》常用积分公式.md
@@ -1,133 +1,76 @@
-# 微积分常用积分公式大全
+### 基础积分公式
+1. **幂函数积分**  
+   $$ \int x^n \, dx = \frac{x^{n+1}}{n+1} + C \quad (n \neq -1) $$
 
-本文档汇总了微积分（高等数学）中常见且重要的不定积分和定积分公式。所有公式均采用 GitHub Flavored Markdown (GFM) 支持的 LaTeX 格式编写。
+2. **指数函数积分**  
+   $$ \int e^x \, dx = e^x + C $$  
+   $$ \int a^x \, dx = \frac{a^x}{\ln a} + C \quad (a>0, a \neq 1) $$
 
-**注意**：在所有不定积分公式的末尾，都应加上一个任意常数 $C$。为简洁起见，部分基础公式列表会省略 $C$，但在实际解题中务必加上。
+3. **对数函数积分**  
+   $$ \int \frac{1}{x} \, dx = \ln |x| + C $$
 
-## 1. 基本积分表 (Elementary Integrals)
-
-这是所有积分运算的基础，必须熟练掌握。
-
-| 函数类型 | 积分公式 | 条件 |
-| :--- | :--- | :--- |
-| **常数函数** | $$\int 0 \,dx = C$$ | |
-| **幂函数** | $$\int x^n \,dx = \frac{x^{n+1}}{n+1} + C$$ | $n \neq -1$ |
-| **反比例函数** | $$\int \frac{1}{x} \,dx = \ln|x| + C$$ | |
-| **指数函数** | $$\int e^x \,dx = e^x + C$$ | |
-| **指数函数** | $$\int a^x \,dx = \frac{a^x}{\ln a} + C$$ | $a > 0, a \neq 1$ |
-| **三角函数 (正弦)** | $$\int \sin x \,dx = -\cos x + C$$ | |
-| **三角函数 (余弦)** | $$\int \cos x \,dx = \sin x + C$$ | |
-| **三角函数 (正切)** | $$\int \tan x \,dx = -\ln|\cos x| + C$$ | |
-| **三角函数 (余切)** | $$\int \cot x \,dx = \ln|\sin x| + C$$ | |
-| **三角函数 (正割)** | $$\int \sec x \,dx = \ln|\sec x + \tan x| + C$$ | |
-| **三角函数 (余割)** | $$\int \csc x \,dx = \ln|\csc x - \cot x| + C$$ | |
-| **三角函数 (正割平方)** | $$\int \sec^2 x \,dx = \tan x + C$$ | |
-| **三角函数 (余割平方)** | $$\int \csc^2 x \,dx = -\cot x + C$$ | |
-| **三角函数 (正割正切)** | $$\int \sec x \tan x \,dx = \sec x + C$$ | |
-| **三角函数 (余割余切)** | $$\int \csc x \cot x \,dx = -\csc x + C$$ | |
-
-## 2. 有理函数积分 (Integrals of Rational Functions)
-
-这类积分通常与反三角函数和对数函数有关。
-
-| 积分形式 | 结果 | 条件 |
-| :--- | :--- | :--- |
-| **反正切形式** | $$\int \frac{1}{x^2 + a^2} \,dx = \frac{1}{a} \arctan\frac{x}{a} + C$$ | $a \neq 0$ |
-| **对数形式 1** | $$\int \frac{1}{x^2 - a^2} \,dx = \frac{1}{2a} \ln\left|\frac{x-a}{x+a}\right| + C$$ | $a \neq 0$ |
-| **对数形式 2** | $$\int \frac{1}{a^2 - x^2} \,dx = \frac{1}{2a} \ln\left|\frac{a+x}{a-x}\right| + C$$ | $a \neq 0$ |
-
-## 3. 无理函数积分 (Integrals of Irrational Functions)
-
-这类积分主要涉及含有根号的表达式。
-
-| 积分形式 | 结果 | 条件 |
-| :--- | :--- | :--- |
-| **反正弦形式** | $$\int \frac{1}{\sqrt{a^2 - x^2}} \,dx = \arcsin\frac{x}{a} + C$$ | $a > 0$ |
-| **对数形式 (双曲)** | $$\int \frac{1}{\sqrt{x^2 + a^2}} \,dx = \ln(x + \sqrt{x^2 + a^2}) + C$$ | $a > 0$ |
-| **对数形式 (双曲)** | $$\int \frac{1}{\sqrt{x^2 - a^2}} \,dx = \ln|x + \sqrt{x^2 - a^2}| + C$$ | $a > 0$ |
-| **根式积分 1** | $$\int \sqrt{a^2 - x^2} \,dx = \frac{x}{2}\sqrt{a^2 - x^2} + \frac{a^2}{2}\arcsin\frac{x}{a} + C$$ | $a > 0$ |
-| **根式积分 2** | $$\int \sqrt{x^2 \pm a^2} \,dx = \frac{x}{2}\sqrt{x^2 \pm a^2} \pm \frac{a^2}{2}\ln|x + \sqrt{x^2 \pm a^2}| + C$$ | |
-
-## 4. 指数、对数与三角函数组合积分
-
-这些是分部积分法的经典应用。
-
-| 积分形式 | 结果 |
-| :--- | :--- |
-| **对数函数** | $$\int \ln x \,dx = x \ln x - x + C$$ |
-| **指数-正弦** | $$\int e^{ax} \sin(bx) \,dx = \frac{e^{ax}}{a^2+b^2}(a\sin(bx) - b\cos(bx)) + C$$ |
-| **指数-余弦** | $$\int e^{ax} \cos(bx) \,dx = \frac{e^{ax}}{a^2+b^2}(a\cos(bx) + b\sin(bx)) + C$$ |
-
-## 5. 三角函数幂的降幂公式与递推公式
-
-### 降幂公式 (Power-Reduction Formulas)
-
-$$
-\sin^2 x = \frac{1 - \cos(2x)}{2}
-$$
-$$
-\cos^2 x = \frac{1 + \cos(2x)}{2}
-$$
-
-### 递推公式 (Reduction Formulas)
-
-$$
-\int \sin^n x \,dx = -\frac{1}{n} \sin^{n-1}x \cos x + \frac{n-1}{n} \int \sin^{n-2}x \,dx
-$$
-$$
-\int \cos^n x \,dx = \frac{1}{n} \cos^{n-1}x \sin x + \frac{n-1}{n} \int \cos^{n-2}x \,dx
-$$
-$$
-\int \tan^n x \,dx = \frac{1}{n-1} \tan^{n-1}x - \int \tan^{n-2}x \,dx
-$$
-$$
-\int \sec^n x \,dx = \frac{1}{n-1} \sec^{n-2}x \tan x + \frac{n-2}{n-1} \int \sec^{n-2}x \,dx
-$$
-
-## 6. 重要积分方法与定积分公式
-
-### 积分方法
-
-- **分部积分法 (Integration by Parts):**
-  $$
-  \int u \,dv = uv - \int v \,du
-  $$
-
-- **定积分分部积分法:**
-  $$
-  \int_a^b u \,dv = [uv]_a^b - \int_a^b v \,du
-  $$
-
-- **换元积分法 (Integration by Substitution):**
-  若 $u = g(x)$, 则
-  $$
-  \int f(g(x))g'(x) \,dx = \int f(u) \,du
-  $$
-
-### 定积分公式
-
-- **牛顿-莱布尼茨公式 (Newton-Leibniz Formula):**
-  设 $F'(x) = f(x)$, 则
-  $$
-  \int_a^b f(x) \,dx = F(b) - F(a)
-  $$
-
-- **华里士公式 (Wallis' Formula):**
-  令 $I_n = \int_0^{\frac{\pi}{2}} \sin^n x \,dx = \int_0^{\frac{\pi}{2}} \cos^n x \,dx$
-  $$
-  I_n =
-  \begin{cases}
-  \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \frac{1}{2} \cdot \frac{\pi}{2}, & \text{当 } n \text{ 为正偶数} \\
-  \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \frac{2}{3}, & \text{当 } n \text{ 为大于1的正奇数}
-  \end{cases}
-  $$
-  **使用双阶乘 `!!` 表示:**
-  $$
-  I_n =
-  \begin{cases}
-  \frac{(n-1)!!}{n!!} \cdot \frac{\pi}{2}, & \text{当 } n \text{ 为正偶数} \\
-  \frac{(n-1)!!}{n!!}, & \text{当 } n \text{ 为正奇数}
-  \end{cases}
-  $$
+4. **三角函数积分**  
+   $$ \int \sin x \, dx = -\cos x + C $$  
+   $$ \int \cos x \, dx = \sin x + C $$  
+   $$ \int \sec^2 x \, dx = \tan x + C $$  
+   $$ \int \csc^2 x \, dx = -\cot x + C $$
 
 ---
+
+### 常用积分技巧公式
+5. **分部积分法**  
+   $$ \int u \, dv = uv - \int v \, du $$
+
+6. **换元积分法**  
+   $$ \int f(g(x)) g'(x) \, dx = \int f(u) \, du \quad (u = g(x)) $$
+
+7. **有理函数积分**  
+   $$ \int \frac{1}{a^2 + x^2} \, dx = \frac{1}{a} \arctan\left(\frac{x}{a}\right) + C $$
+
+8. **平方差公式**  
+   $$ \int \frac{1}{\sqrt{a^2 - x^2}} \, dx = \arcsin\left(\frac{x}{a}\right) + C $$
+
+---
+
+### 进阶积分公式
+9. **双曲函数积分**  
+   $$ \int \sinh x \, dx = \cosh x + C $$  
+   $$ \int \cosh x \, dx = \sinh x + C $$
+
+10. **反三角函数积分**  
+    $$ \int \frac{1}{\sqrt{1 - x^2}} \, dx = \arcsin x + C $$  
+    $$ \int \frac{1}{1 + x^2} \, dx = \arctan x + C $$
+
+11. **高斯积分**  
+    $$ \int_{-\infty}^{\infty} e^{-x^2} \, dx = \sqrt{\pi} $$
+
+12. **傅里叶变换核**  
+    $$ \int_{-\infty}^{\infty} e^{-i\omega t} \, dt = 2\pi \delta(\omega) $$
+
+---
+
+### 定积分性质
+13. **牛顿-莱布尼茨公式**  
+    $$ \int_a^b f(x) \, dx = F(b) - F(a) \quad (F'(x) = f(x)) $$
+
+14. **对称区间积分**  
+    $$ \int_{-a}^{a} f(x) \, dx = \begin{cases} 
+      2\int_0^a f(x) \, dx & \text{if } f(-x) = f(x) \\
+      0 & \text{if } f(-x) = -f(x)
+    \end{cases} $$
+
+---
+
+### 多重积分
+15. **二重积分（直角坐标）**  
+    $$ \iint_D f(x,y) \, dx \, dy $$
+
+16. **极坐标变换**  
+    $$ \iint_D f(r\cos\theta, r\sin\theta) \, r \, dr \, d\theta $$
+
+---
+
+> **提示**：GitHub 使用 MathJax 渲染公式，需满足：
+> 1. 公式必须用 `$$` 包裹（行内公式用 `$`）
+> 2. 避免使用 `\begin{align}` 等复杂环境（用 `\begin{cases}` 代替）
+> 3. 换行符 `\\` 后需添加空格：`\\[2ex]`（防止解析错误）
